<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.umyhfilian.continuallocationapp.MainActivity">
    <TextView
    android:textAlignment="center"
    android:id="@+id/Latitude1"
    android:layout_centerHorizontal="true"
    android:text="@string/latitude"
    android:layout_width="100dp"
    android:layout_height="25dp"
    android:layout_marginTop="40dp" />
    <TextView
    android:textAlignment="center"
    android:layout_below="@+id/Latitude1"
    android:layout_centerHorizontal="true"
    android:text="@string/Latitude"
    android:id="@+id/mLatitudeTextView"
    android:textSize="40sp"
    android:layout_width="200dp"
    android:layout_height="50dp"
        android:textStyle="bold" />
    <TextView
        android:textAlignment="center"
        android:layout_below="@id/mLatitudeTextView"
        android:id="@+id/longitude"
        android:layout_centerHorizontal="true"
        android:text="@string/longitude"
        android:layout_width="100dp"
        android:layout_height="25dp" />
    <TextView
        android:textAlignment="center"
        android:layout_below="@+id/longitude"
        android:layout_centerHorizontal="true"
        android:text="@string/Longitude"
        android:id="@+id/mLongitudeTextView"
        android:textSize="40sp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textStyle="bold" />
    <TextView
        android:textAlignment="center"
        android:layout_below="@+id/mLongitudeTextView"
        android:id="@+id/time"
        android:layout_centerHorizontal="true"
        android:text="@string/updatetime"
        android:layout_width="100dp"
        android:layout_height="25dp" />
    <TextView
        android:textAlignment="center"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:text="@string/UpdateTime"
        android:id="@+id/mLastUpdateTimeTextView"
        android:textSize="40sp"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:textStyle="bold" />

    <AnalogClock
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analogClock"
        android:layout_below="@+id/mLastUpdateTimeTextView"
        android:layout_marginTop="38dp" />
</RelativeLayout>